# tudouURL

./: .gitignore  Makefile  compose.yaml  pyproject.toml
apps/shorturl/: __init__.py  admin.py  models.py  redirect_urls.py  serializers.py  services.py  task.py  tasks.py  tests.py  urls.py  views.py
apps/shorturl/migrations/: 0001_initial.py  0002_remove_shorturls_short_code.py  0003_shorturls_is_deleted.py  0004_shorturls_expires_at.py  0005_alter_shorturls_expires_at.py  0006_alter_shorturls_expires_at.py
config/: settings.py  urls.py
